@@ -2,7 +2,7 @@
                           rksettingsmoduleplugins  -  description
                              -------------------
     begin                : Wed Jul 28 2004
-    copyright            : (C) 2004 by Thomas Friedrichsmeier
+    copyright            : (C) 2004, 2006, 2007 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -25,15 +25,21 @@
 #include <qlabel.h>
 #include <qbuttongroup.h>
 #include <qradiobutton.h>
+#include <qvgroupbox.h>
+#include <qcheckbox.h>
+#include <qhbox.h>
 
 #include "../rkward.h"
 #include "../rkglobals.h"
 #include "../misc/multistringselector.h"
 #include "../misc/rkcommonfunctions.h"
+#include "../misc/rkspinbox.h"
 
 // static members
 QStringList RKSettingsModulePlugins::plugin_maps;
 RKSettingsModulePlugins::PluginPrefs RKSettingsModulePlugins::interface_pref;
+bool RKSettingsModulePlugins::show_code;
+int RKSettingsModulePlugins::code_size;
 
 RKSettingsModulePlugins::RKSettingsModulePlugins (RKSettings *gui, QWidget *parent) : RKSettingsModule (gui, parent) {
 	QVBoxLayout *main_vbox = new QVBoxLayout (this, RKGlobals::marginHint ());
@@ -53,11 +59,25 @@ RKSettingsModulePlugins::RKSettingsModulePlugins (RKSettings *gui, QWidget *pare
 	group_layout->addWidget (new QRadioButton (i18n ("Prefer recommended interface"), button_group));
 	group_layout->addWidget (new QRadioButton (i18n ("Always prefer wizards"), button_group));
 	button_group->setButton (static_cast<int> (interface_pref));
-	connect (button_group, SIGNAL (clicked (int)), this, SLOT (buttonClicked (int)));
+	connect (button_group, SIGNAL (clicked (int)), this, SLOT (settingChanged (int)));
 	main_vbox->addWidget (button_group);
 	
 	main_vbox->addSpacing (2*RKGlobals::spacingHint ());
+
+	QVGroupBox *code_frame = new QVGroupBox (i18n ("R syntax display (in dialogs)"), this);
+	show_code_box = new QCheckBox (i18n ("Code shown by default"), code_frame);
+	show_code_box->setChecked (show_code);
+	connect (show_code_box, SIGNAL (stateChanged (int)), this, SLOT (settingChanged (int)));
+
+	QHBox *code_size_hbox = new QHBox (code_frame);
+	new QLabel (i18n ("Default height of code display (pixels)"), code_size_hbox);
+	code_size_box = new RKSpinBox (code_size_hbox);
+	code_size_box->setIntMode (20, 5000, code_size);
+	connect (code_size_box, SIGNAL (valueChanged (int)), this, SLOT (settingChanged (int)));
+	main_vbox->addWidget (code_frame);
 	
+	main_vbox->addSpacing (2*RKGlobals::spacingHint ());
+
 	map_choser = new MultiStringSelector (i18n ("Select .pluginmap file(s)"), this);
 	map_choser->setValues (plugin_maps);
 	connect (map_choser, SIGNAL (getNewStrings (QStringList*)), this, SLOT (browseRequest (QStringList*)));
@@ -74,7 +94,7 @@ void RKSettingsModulePlugins::pathsChanged () {
 	change ();
 }
 
-void RKSettingsModulePlugins::buttonClicked (int) {
+void RKSettingsModulePlugins::settingChanged (int) {
 	change ();
 }
 
@@ -97,6 +117,9 @@ void RKSettingsModulePlugins::applyChanges () {
 #else
 	interface_pref = static_cast<PluginPrefs> (button_group->selectedId ());
 #endif
+	show_code = show_code_box->isChecked ();
+	code_size = code_size_box->value ();
+
 	RKWardMainWindow::getMain ()->initPlugins();
 }
 
@@ -108,6 +131,8 @@ void RKSettingsModulePlugins::saveSettings (KConfig *config) {
 	config->setGroup ("Plugin Settings");
 	config->writeEntry ("Plugin Maps", plugin_maps);
 	config->writeEntry ("Interface Preferences", static_cast<int> (interface_pref));
+	config->writeEntry ("Code display default", show_code);
+	config->writeEntry ("Code display size", code_size);
 }
 
 void RKSettingsModulePlugins::loadSettings (KConfig *config) {
@@ -131,6 +156,8 @@ void RKSettingsModulePlugins::loadSettings (KConfig *config) {
 // END
 
 	interface_pref = static_cast<PluginPrefs> (config->readNumEntry ("Interface Preferences", static_cast<int> (PreferWizard)));
+	show_code = config->readBoolEntry ("Code display default", true);
+	code_size = config->readNumEntry ("Code display size", 40);
 }
 
 #include "rksettingsmoduleplugins.moc"
